Attempt to fix OS/2 bustage caused by autoconf test that changes the definition of |PRUnichar| from |PRUint16| to |wchar_t| on platforms where |sizeof(wchar_t)| is 2.  UniChar was accidentally used in place of PRUnichar.  b=54564